// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DotStatus should match snapshot for green 1`] = `
<body>
  <div>
    <div
      class="box-content h-2 w-2 rounded-full border-2 border-positive-subtle bg-surface-positive-solid"
    />
  </div>
</body>
`;

exports[`DotStatus should match snapshot for red 1`] = `
<body>
  <div>
    <div
      class="box-content h-2 w-2 rounded-full border-2 border-negative-subtle bg-surface-negative-solid"
    />
  </div>
</body>
`;

exports[`DotStatus should match snapshot for yellow 1`] = `
<body>
  <div>
    <div
      class="box-content h-2 w-2 rounded-full border-2 border-warning-subtle bg-surface-warning-solid"
    />
  </div>
</body>
`;
